--- a/cl2020.html
+++ b/cl2020.html
@@ -4,6 +4,7 @@
     </HEAD>
   <BODY>
     <H2>人工衛星「みちびき」について</H2>
-<P>私が人工衛星の「みちびき」について調べるに至ったのは、漠然と宇宙に興味を持っていたことがあり
+<P>　私が人工衛星の「みちびき」について調べるに至ったのは、漠然と宇宙に興味を持っていたことがあり
   、小惑星探査機の「いとかわ」などに興味があり、みちびきについても興味をもった
-  。更に、大学受験の際の移動でスマートフォンや車のナビゲーションを</P>
+  。更に、大学受験の際の移動でスマートフォンや車のナビゲーションを多用していて、
+  そこから「どういう風にして、人工衛星で位置を把握しているのか」などを考えていたからだ。</P>
