--- a/cl2020.html
+++ b/cl2020.html
@@ -12,7 +12,7 @@
 2．人工衛星「みちびき」について
 3．「みちびき」の使用例
       4． 考察</P>
-    人工衛星の基本情報
+    <A NAME="#name>人工衛星の基本情報</A>
     　まず、よく耳にするGPSとはGlobal Positioning Systemの略で日本語では全地球測位システム
     である。だが、これはアメリカの人工衛星による位置を把握するシステムであり、各国が似たような
     システムを持っているため、それぞれに区別する名前があるがそれらを総称してGNSSという。
