--- a/cl2020.html
+++ b/cl2020.html
@@ -35,3 +35,4 @@
      自然現象に大きく影響をうけるGPSに頼り切ってよいのかと私は疑問に思った。</P>
    <H1> 参考文献</H1>
      <P>[1] https://qzss.go.jp/usage/userreport/use-cases_181025.html</P>
+     </BODY>
