--- a/cl2020.html
+++ b/cl2020.html
@@ -19,13 +19,13 @@
    <H4> 人工衛星「みちびき」について</H4>
     <P>　“<B>日本版GPSの準天長衛星システム（QZSS）を構成する人工衛星が｛みちびき」である。
     　みちびきはこれからGPSの補強として役に立てられるが他には、農業分野・自動車分野・
-    　建機工機分野・船舶海洋分野・物流分野・防災分野に役立てられる。<B>”[1]と内閣府が発
+    　建機工機分野・船舶海洋分野・物流分野・防災分野に役立てられる。</B>”[1]と内閣府が発
      表している。</P>
     <H4>「みちびき」の使用例</H4>
     　上記の分野のなかで興味をもったGPSを用いた農業についてで、“<B>高齢化の進行（210万人の
     6割以上が65歳以上）等により労働力不足が深刻。人手に頼る作業や熟練者でなければでき
     ない作業が多く、省力化が喫緊の課題。 安倍総理が2018年に圃場内の農機の自動走行システ
-     ムの市販化、2020年に遠隔監視で 無人システムの実現に向け制度整備等を行う旨発言。<B>”[1]</P>
+     ムの市販化、2020年に遠隔監視で 無人システムの実現に向け制度整備等を行う旨発言。</B>”[1]</P>
      <H4>考察</H4>
   <P>  私は今までGPSは数メートル単位で正確だとは思っていたが、数センチ単位で正確なことができ
     るようになったと知り驚いた。もしこのままほぼ無人で農業ができて日本の海外に頼ることの多
