--- a/cl2020.html
+++ b/cl2020.html
@@ -17,7 +17,7 @@
     である。だが、これはアメリカの人工衛星による位置を把握するシステムであり、各国が似たような
      システムを持っているため、それぞれに区別する名前があるがそれらを総称してGNSSという。</P>
    <H4> 人工衛星「みちびき」について</H4>
-    <P>　“<i>日本版GPSの準天長衛星システム（QZSS）を構成する人工衛星が｛みちびき」である。
+    <P>　“<i>日本版GPSの準天長衛星システム（QZSS）を構成する人工衛星が「みちびき」である。
     　みちびきはこれからGPSの補強として役に立てられるが他には、農業分野・自動車分野・
     　建機工機分野・船舶海洋分野・物流分野・防災分野に役立てられる。</i>”[1]と内閣府が発
      表している。</P>
