--- a/cl2020.html
+++ b/cl2020.html
@@ -8,11 +8,11 @@
   、小惑星探査機の「いとかわ」などに興味があり、みちびきについても興味をもった
   。更に、大学受験の際の移動でスマートフォンや車のナビゲーションを多用していて、
   そこから「どういう風にして、人工衛星で位置を把握しているのか」などを考えていたからだ。</P>
-    <P>1．<A HREF="#name">[人工衛星の基本情報]</A><BR>
+    <P>1．<A HREF="#a">[人工衛星の基本情報]</A><BR>
 2．人工衛星「みちびき」について<BR>
 3．「みちびき」の使用例<BR>
       4． 考察</P>
-   <H4> <A NAME="#name">[人工衛星の基本情報]</A></H4>
+   <H4> <A NAME="#a">[人工衛星の基本情報]</A></H4>
     <P>　まず、よく耳にするGPSとはGlobal Positioning Systemの略で日本語では全地球測位システム
     である。だが、これはアメリカの人工衛星による位置を把握するシステムであり、各国が似たような
      システムを持っているため、それぞれに区別する名前があるがそれらを総称してGNSSという。</P>
