--- a/cl2020.html
+++ b/cl2020.html
@@ -9,14 +9,14 @@
   。更に、大学受験の際の移動でスマートフォンや車のナビゲーションを多用していて、
   そこから「どういう風にして、人工衛星で位置を把握しているのか」などを考えていたからだ。</P>
     <P>1．<A HREF="#a">[人工衛星の基本情報]</A><BR>
-2．人工衛星「みちびき」について<BR>
+      2．<a href="#b">人工衛星「みちびき」について</A><BR>
 3．「みちびき」の使用例<BR>
       4． 考察</P>
-   <H4> <A NAME="#a">[人工衛星の基本情報]</A></H4>
+   <H4> <A NAME="a">[人工衛星の基本情報]</A></H4>
     <P>　まず、よく耳にするGPSとはGlobal Positioning Systemの略で日本語では全地球測位システム
     である。だが、これはアメリカの人工衛星による位置を把握するシステムであり、各国が似たような
      システムを持っているため、それぞれに区別する名前があるがそれらを総称してGNSSという。</P>
-   <H4> 人工衛星「みちびき」について</H4>
+      <H4> <a name="b">人工衛星「みちびき」について</a></H4>
     <P>　“<i>日本版GPSの準天長衛星システム（QZSS）を構成する人工衛星が「みちびき」である。
     　みちびきはこれからGPSの補強として役に立てられるが他には、農業分野・自動車分野・
     　建機工機分野・船舶海洋分野・物流分野・防災分野に役立てられる。</i>”[1]と内閣府が発
