--- a/cl2020.html
+++ b/cl2020.html
@@ -10,8 +10,8 @@
   そこから「どういう風にして、人工衛星で位置を把握しているのか」などを考えていたからだ。</P>
     <P>1．<A HREF="#a">[人工衛星の基本情報]</A><BR>
       2．<a href="#b">人工衛星「みちびき」について</A><BR>
-3．「みちびき」の使用例<BR>
-      4． 考察</P>
+      3．<a href="#c">「みちびき」の使用例</a><BR>
+      4． <a href="#d">考察</a></P>
    <H4> <A NAME="a">[人工衛星の基本情報]</A></H4>
     <P>　まず、よく耳にするGPSとはGlobal Positioning Systemの略で日本語では全地球測位システム
     である。だが、これはアメリカの人工衛星による位置を把握するシステムであり、各国が似たような
@@ -21,12 +21,12 @@
     　みちびきはこれからGPSの補強として役に立てられるが他には、農業分野・自動車分野・
     　建機工機分野・船舶海洋分野・物流分野・防災分野に役立てられる。</i>”[1]と内閣府が発
      表している。</P>
-    <H4>「みちびき」の使用例</H4>
+      <H4><a name="c">「みちびき」の使用例</a></H4>
     　上記の分野のなかで興味をもったGPSを用いた農業についてで、“<i>高齢化の進行（210万人の
     6割以上が65歳以上）等により労働力不足が深刻。人手に頼る作業や熟練者でなければでき
     ない作業が多く、省力化が喫緊の課題。 安倍総理が2018年に圃場内の農機の自動走行システ
      ムの市販化、2020年に遠隔監視で 無人システムの実現に向け制度整備等を行う旨発言。</i>”[1]</P>
-     <H4>考察</H4>
+      <H4><a name="d">考察</a></H4>
   <P>  私は今までGPSは数メートル単位で正確だとは思っていたが、数センチ単位で正確なことができ
     るようになったと知り驚いた。もしこのままほぼ無人で農業ができて日本の海外に頼ることの多
     い食料生産に関する問題も解決できると私も思った。技術的な面ではあまり分からないが、食料
