--- a/cl2020.html
+++ b/cl2020.html
@@ -37,3 +37,4 @@
      <P>[1]<a herf="https://qzss.go.jp/usage/userreport/use-cases_181025.html">
        https://qzss.go.jp/usage/userreport/use-cases_181025.html</</P>
      </BODY>
+       </html>
