--- a/cl2020.html
+++ b/cl2020.html
@@ -34,7 +34,7 @@
     と疑問に考える。もし、食料自給の大半をGPS制御の農園などが担うとすれば、太陽フレアなどの
      自然現象に大きく影響をうけるGPSに頼り切ってよいのかと私は疑問に思った。</P>
    <H4> 参考文献</H4>
-     <P>[1]<a herf="https://qzss.go.jp/usage/userreport/use-cases_181025.html">
+     <P>[1]<a href="https://qzss.go.jp/usage/userreport/use-cases_181025.html">
        https://qzss.go.jp/usage/userreport/use-cases_181025.html</a></P>
      </BODY>
        </html>
